12410 bpf: variable may be used uninitialized Reviewed by: Yuri Pankov <ypankov@fastmail.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>